<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BaseViewDemo1.0</string>
    <string name="title_bar">TitleBar</string>
    <string name="scroll_list_view">RefreshListView</string>
    <string name="refresh_layout">RefreshLayout+Adapter</string>
    <string name="table_view">TableView</string>
    <string name="my_list_view">MyListView</string>
    <string name="process_dialog_action">ProcessDlgAction</string>
    <string name="text_bubble_menu">BubbleMenu</string>
    <string name="icon_font_text_view">IconFontTextView</string>
    <string name="tab_view">TabView</string>
    <!-- widget -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="appwidget_configure_instructions">This text will be shown before the date in our example widget.</string>
    <string name="appwidget_prefix_default">Widget</string>
    <string name="appwidget_text_format"><xliff:g id="prefix">%1$s</xliff:g>: <xliff:g id="time">%2$s</xliff:g></string>

    <string name="crop__saving">正在保存图片…</string>
    <string name="crop__wait">请稍后…</string>
    <string name="crop__pick_error">无图片可用</string>
    <string name="crop__done">完成</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">取消</string>
</resources>
